<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_50"
    tools:context=".feature.entries.ui.EntriesActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/entries_title"
                android:textSize="@dimen/default_36sp"
                android:layout_marginTop="@dimen/default_16dp"
                android:layout_marginBottom="@dimen/default_8dp"
                android:layout_marginStart="@dimen/default_16dp"
                android:layout_marginEnd="@dimen/default_8dp"
                android:textColor="@color/purple_500"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <Button
                android:id="@+id/bt_detailed"
                android:layout_width="54dp"
                android:layout_height="64dp"
                android:layout_margin="@dimen/default_8dp"
                android:layout_marginTop="8dp"
                android:text="@string/folder_icon"
                android:textSize="@dimen/default_18sp"
                android:contentDescription="@string/detail"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.831"
                app:layout_constraintStart_toEndOf="@id/tv_title"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_entries"
                android:scrollbars="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_16dp"
                tools:listitem="@layout/entry_item"
                app:layout_constraintTop_toBottomOf="@id/tv_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>